# about_weather

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
app/: contracts.py  dependencies.py  tools.py
app/lang/: localization.py
app/lang/ru/: base.py  days.py
app/prompts/: prompt.py  prompt_data.py
app/providers/: ttl_cache.py
app/providers/api/: openrouter_api.py  weatherapi_api.py
app/routers/: weather.py
app/schemas/: api_schemas.py
tests/: tools_test.py  ttl_cache_test.py  weatherapi_api_test.py
